--- a/minggu8/layout.html
+++ b/minggu8/layout.html
@@ -28,7 +28,7 @@
         <p class="dua">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo aliquid dolorem tempora in a culpa facilis repellat? Exercitationem voluptatem minima quis vitae in hic dolore sint fugiat quas dolor voluptates veritatis officia facilis rem, alias quo, qui optio magni error laborum voluptas, praesentium distinctio. Inventore reiciendis doloremque praesentium sapiente vitae omnis suscipit itaque esse harum, laborum sunt, fugit neque asperiores numquam magni, dolorem quibusdam cupiditate quos consequatur. Nam quis asperiores quod aperiam beatae nulla dicta fuga eum dignissimos ab consequatur consectetur, reprehenderit molestiae omnis ut voluptatem. Adipisci quisquam odit laudantium temporibus quasi consequuntur doloremque architecto fugiat odio dolore, totam maxime.</p>
     </article>
     <footer>
-        copyright <i>&copy;</i> pbw2022
+        <p>copyright <i>&copy;</i> pbw2022</p>
     </footer>
 </body>
 </html>
